# OpenVCS

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package-lock.json  package.json
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: codeql.yml  development.yml  nightly.yml  publish-stable.yml  publish.yml
Backend/: Cargo.toml  build.rs  tauri.conf.json
Backend/src/: lib.rs  logging.rs  main.rs  menus.rs  repo_settings.rs  settings.rs  state.rs  tauri_commands.rs
Backend/src/utilities/: utilities.rs
Frontend/: index.html  main.js  package-lock.json  package.json  styles.css  tsconfig.json  tsconfig.node.json  vite.config.mts  vite.config.ts
Frontend/src/: styles.css
Frontend/src/modals/: about.html  commandSheet.html  new-branch.html  rename-branch.html  repo-settings.html  settings.html  update.html
Frontend/src/scripts/: main.ts  types.d.ts
Frontend/src/scripts/features/: about.ts  branches.ts  commandSheet.ts  diff.ts  newBranch.ts  renameBranch.ts  repo.ts  repoSettings.ts  settings.ts  update.ts
Frontend/src/scripts/lib/: dom.ts  menu.ts  notify.ts  tauri.ts
Frontend/src/scripts/state/: state.ts
Frontend/src/scripts/ui/: layout.ts  modals.ts
Frontend/src/styles/: base.css  components.css  index.css  layout.css  popover.css  responsive.css  tokens.css
Frontend/src/styles/modal/: command-sheet.css  modal-base.css  new-branch.css  repo-settings.css  settings.css
crates/openvcs-core/: Cargo.toml
crates/openvcs-core/src/: backend_descriptor.rs  backend_id.rs  lib.rs  models.rs
crates/openvcs-git/: Cargo.toml  build.rs
crates/openvcs-git-libgit2/: Cargo.toml
crates/openvcs-git-libgit2/src/: lib.rs  lowlevel.rs
crates/openvcs-git/src/: lib.rs
src/: index.html  main.js  prompt.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/scripts/: run-tauri.sh  run.sh
src-tauri/src/: git.rs  lib.rs  menus.rs  state.rs  tauri_commands.rs  validate.rs  workarounds.rs
src-tauri/src/utilities/: utilities.rs
src-tauri/src/vcs/: git.rs  mod.rs  vcs.rs
