[package]
name = "openvcs"
version = "0.0.0-alpha"
description = "OpenVCS: a lightweight, highly customizable Git GUI built on Rust & Tauri"
authors = ["Jordon Brooks"]
homepage = "https://bbgames.dev"
repository = "https://github.com/Jordonbc/OpenVCS"
license = "GPL-3.0-or-later"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "openvcs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4", default-features = false, features = [] }

[features]
default = ["with-git", "with-git-libgit2"]        # enable both by default
with-git = ["dep:openvcs-git"]
with-git-libgit2 = ["dep:openvcs-git-libgit2"]

[dependencies]
openvcs-core = { path = "../crates/openvcs-core" }
openvcs-git = { path = "../crates/openvcs-git", optional = true }
openvcs-git-libgit2 = { path = "../crates/openvcs-git-libgit2", optional = true }

tauri = { version = "2.8", features = [] }
tauri-plugin-opener = "2.5"
serde = { version = "1", features = ["derive"] }
tauri-plugin-dialog = "2.4"
tokio = "1.47"
dirs = "6"
regex = "1.11"
log = "0.4" 
env_logger = "0.11"
parking_lot = "0.12"
toml = "0.9.5"
directories = "6"
serde_json = "1.0"
