[package]
name = "openvcs"
version = "0.0.0-alpha"
description = "OpenVCS: a lightweight, highly customizable Git GUI built on Rust & Tauri"
authors = ["Jordon Brooks"]
homepage = "https://bbgames.dev"
repository = "https://github.com/Jordonbc/OpenVCS"
license = "GPL-3.0-or-later"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"            # optimize for size
lto = true                 # link-time optimizations
codegen-units = 1          # single codegen unit for better inlining
panic = "abort"            # no unwind tables
debug = false              # drop debug info
strip = "symbols"          # remove symbol table (cargo ≥1.62)

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "openvcs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4", default-features = false, features = [] }

[dependencies]
tauri = { version = "2.8", features = [] }
tauri-plugin-opener = "2.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.20"
thiserror = "2"
tauri-plugin-dialog = "2.4.0"
lazy_static = "1.5.0"
tokio = "1.47.1"
dirs = "6.0.0"
regex = "1.11.2"

